--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-pyyaml
-
+greenlet==2.0.0.post0
+pathlib==1.0.1
+pydantic==1.10.2
+python-dateutil==2.8.2
+PyYAML==6.0
+six==1.16.0
+SQLAlchemy==1.4.43
+tqdm==4.64.1
+typing_extensions==4.4.0
